test/error/parse/ExpectEnd.mod
MODULE ExpectEnd;
BEGIN
  IF TRUE THEN
    ;
  END ExpectEnd.
